Refactor
Signed-off-by: expani <anijainc@amazon.com>